# polytlk

./: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile  README.md  Tiltfile  babel.config.js  base.dockerfile  infracost.yml  infracost.yml.tmpl  ingress-values.yaml  kind.sh  lint-staged.config.js  nx.json  orval.config.js  otel-collector-config.yaml  package-lock.json  package.json  pnpm-lock.yaml  polytlk.code-workspace  project.json  pyproject.toml  serve.yaml  tsconfig.base.json  tyk.yaml
.github/workflows/: main.yml  manual-build-all-images.yml  manual-build-image.yml  manual.yml  ply-dev-deploy.yaml  pull-request.yml
apps/local-dev-proxy/: jest.config.ts  project.json
apps/local-dev-proxy/src/: main.ts
apps/microservices/eden/: .flake8  Dockerfile  Dockerfile.test  Service.Tiltfile  Tiltfile  Worker.Tiltfile  atlas.hcl  kubernetes.yaml  project.json  pyproject.toml  worker.yaml
apps/microservices/eden/eden/: __init__.py  app.py  asgi.py  chinese.py  config.py  health_check.py  lifespan.py  load_model.py  main.py  schemas.py  tracing.py
apps/microservices/eden/eden/chinese/: __init__.py  router.py  schemas.py  tasks.py
apps/microservices/eden/eden/models/: crud.py  database.py  models.py  processing.py  validators.py
apps/microservices/eden/eden/utils/: __init__.py  load_models.py  migrate.py  tokenization.py  validation.py
apps/microservices/eden/eden/utils/model/: load.py
apps/microservices/eden/migrations/: 20240926003305.sql  20240928155117.sql  20240928170359.sql  atlas.sum
apps/microservices/eden/scripts/: check.sh  entrypoint.sh  format.sh  template.sh  template_dev.sh
apps/microservices/eden/tests/: test_app.py  test_index.py  test_validation.py
apps/microservices/eden/tilt/: api.yaml  kubernetes.yaml
apps/microservices/eden/tilt/api/: apidefinitions.yaml  delete-api-jobs.yaml
apps/microservices/eden/tilt/deployment/: deployment.yaml
apps/microservices/heimdall/: .dockerignore  .flake8  Dockerfile  README.md  Tiltfile  atlas.hcl  db.sqlite3  kubernetes.yaml  manage.py  project.json  pyproject.toml
apps/microservices/olivia/: .flake8  Dockerfile  README.md  Tiltfile  kubernetes.yaml  logging.ini  project.json  pyproject.toml
apps/microservices/olivia/olivia/: __init__.py  app.py  asgi.py
apps/microservices/olivia/scripts/: check.sh
apps/microservices/socrates/: .dockerignore  .flake8  Dockerfile  README.md  Tiltfile  kubernetes.yaml  project.json  pyproject.toml
apps/microservices/socrates/scripts/: check.sh  entrypoint.sh  format.sh  template.sh  template_dev.sh
apps/microservices/socrates/socrates/: __init__.py  app.py  asgi.py  config.py  functions.py  main.py  prompts.py  tracing.py
apps/microservices/socrates/socrates/openai/: __init__.py  functions.py  interpret.py  prompts.py  router.py
apps/microservices/socrates/tilt/: kubernetes.yaml
apps/microservices/socrates/tilt/deployment/: deployment.yaml
apps/polytlk/: .eslintrc.json  jest.config.ts  kubernetes.yaml  project.json
apps/polytlk-e2e/: project.json
apps/polytlk/pages/: _app.tsx  index.tsx  styles.css
apps/socrates/: Dockerfile  Tiltfile  kubernetes.yaml  project.json  pyproject.toml
apps/socrates/socrates/: app.py  asgi.py  index.py
apps/socrates/tests/: test_index.py
apps/terraform/bastion-host/: README.md  project.json  tfsec.yml
apps/terraform/gha-runners/: README.md  infracost-ply-cicd-usage.yml  project.json  tfsec.yml
apps/terraform/gke-cluster/: README.md  project.json  tfsec.yml
apps/terraform/tfstate-bucket/: README.md  (+2 more)
apps/web-client/: .env.example  .eslintrc.json  Dockerfile  Dockerfile.tilt  Tiltfile  babel.config.cjs  capacitor.config.ts  ionic.config.json  jest.config.ts  nginx.conf  package.json  pnpm-lock.yaml  project.json  serve.yaml  tsconfig.app.json  tsconfig.json  tsconfig.storybook.json  webpack.config.cjs  webpack.nx.config.cjs
apps/workers/eden/: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.dev  README.md  Tiltfile  kubernetes.yaml  project.json  pyproject.toml
apps/workers/eden/eden/: celery_utils.py  config.py  main.py
apps/workers/eden/eden/chinese/: api_request.py  schema.py  tasks.py
apps/workers/eden/eden/chinese/schema/: ari.py  response.py
apps/workers/eden/eden/model/: __init__.py  constants.py  load.py  singleton.py
apps/workers/eden/eden/utils/model/: singleton.py
apps/workers/eden/scripts/: check.sh  entrypoint.sh  format.sh  get_model.sh  template.sh  template_dev.sh
apps/workers/eden/tests/: test_schema.py  test_validation.py
apps/workers/eden/tilt/: kubernetes.yaml
apps/workers/eden/tilt/deployment/: deployment.yaml
charts/apis-chart/: Chart.yaml  values.yaml
docs/arch/: dependencies.md
docs/links/: go-templating.md
docs/manual/: bootstrapping-cluster.md  creating-secrets.md  creating-typesafe-clients.md  setup-certs-from-local.md
envs/local/: Tiltfile
envs/nonprod/: helmfile.yaml
helm/: README.md  development-addons-set.yaml  development-addons-with-deps-set.yaml  development-app-set.yaml  helmfile.yaml
helm/base/: README.md  Tiltfile  helmfile.yaml
helm/eden/: README.md  helmfile.yaml  helmfile.yaml.gotmpl
helm/eden-worker/: README.md  helmfile.yaml  helmfile.yaml.gotmpl
helm/heimdall/: README.md  helmfile.yaml  helmfile.yaml.gotmpl  values1.yaml.gotmpl
helm/socrates/: README.md  helmfile.yaml  helmfile.yaml.gotmpl
helm/tyk/: helmfile.yaml.gotmpl  tyk-gw-oss-default-values.yaml  tyk-gw-oss-development-values.yaml
helm/web/: README.md  helmfile.yaml.gotmpl
k8s/tyk/: Tiltfile  tyk.yaml
libs/echo-plugin/: PolytlkEchoPlugin.podspec  README.md  jest.config.ts  package.json  pnpm-lock.yaml  project.json  rollup.config.js
tilt/flower/: Tiltfile
tilt/opentelemetry/: Tiltfile
tilt/otel-collector/: Tiltfile  values.yaml
tilt/tyk/: Tiltfile  values.yaml
tilt/tyk-operator/: Tiltfile
tools/helm-templates/: README.md  generators.json  jest.config.ts  package.json  project.json
tools/scripts/: template_addons.sh  template_apps.sh  template_tyk.sh  write_values.sh
(+419 files in other folders)
