[tool.coverage.run]
branch = true
source = [ "eden" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.isort]
known_third_party = ["eden."]

[tool.mypy]
strict = true
namespace_packages = true
ignore_missing_imports = true

[tool.poetry]
name = "polytlk-eden"
version = "1.0.0"
description = "Eden: microservice for chinese NLP"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

[[tool.poetry.packages]]
include = "eden"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
lingua-language-detector = "^1.3.2"
opentelemetry-sdk = "^1.18.0"
opentelemetry-api = "^1.18.0"
opentelemetry-instrumentation-fastapi = "^0.39b0"
zhon = "^1.1.5"
opentelemetry-exporter-otlp-proto-http = "^1.18.0"
celery = "^5.3.0"
redis = "^4.5.5"
opentelemetry-instrumentation-celery = "^0.39b0"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.0"
wemake-python-styleguide = {git = "https://github.com/wemake-services/wemake-python-styleguide.git"}
pytest = "^7.3.2"
hypothesis = "^6.77.0"
mypy = "^1.3.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
