[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core==1.1.0"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
show_missing = true

[tool.coverage.run]
branch = true
source = ["eden"]

[tool.isort]
known_third_party = ["eden."]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
strict = true

[tool.poetry]
authors = []
description = "Eden: microservice for chinese NLP"
license = "Proprietary"
name = "polytlk-eden"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
celery = "^5.3.0"
fastapi = "^0.95.2"
lingua-language-detector = "^1.3.2"
opentelemetry-api = "^1.18.0"
opentelemetry-exporter-otlp-proto-http = "^1.18.0"
opentelemetry-instrumentation-celery = "^0.39b0"
opentelemetry-instrumentation-fastapi = "^0.39b0"
opentelemetry-sdk = "^1.18.0"
python = ">=3.11,<4.0"
redis = "^4.5.5"
zhon = "^1.1.5"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.22.0"

[[tool.poetry.packages]]
include = "eden"
