[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core==1.1.0"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
show_missing = true

[tool.coverage.run]
branch = true
source = ["eden"]

[tool.isort]
known_third_party = ["eden."]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
strict = true

[tool.poetry]
authors = []
description = "Eden: microservice for chinese NLP"
license = "Proprietary"
name = "polytlk-eden"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
celery = "^5.3.0"
fastapi = "0.114.1"
lingua-language-detector = "^1.3.2"
opentelemetry-api = "1.26.0"
opentelemetry-exporter-otlp-proto-http = "1.26.0"
opentelemetry-instrumentation-celery = "0.47b0"
opentelemetry-instrumentation-fastapi = "0.47b0"
opentelemetry-sdk = "1.26.0"
pydantic = "2.9.1"
python = ">=3.11,<4.0"
redis = "^4.5.5"
sse-starlette = "^1.6.1"
zhon = "^1.1.5"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.9"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.22.0"

[[tool.poetry.packages]]
include = "eden"
