[tool.coverage.run]
branch = true
source = [ "olivia" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../../coverage/apps/microservices/olivia/html' --cov-report xml:'../../../coverage/apps/microservices/olivia/coverage.xml' --junitxml='../../../reports/apps/microservices/olivia/unittests/junit.xml' --html='../../../reports/apps/microservices/olivia/unittests/html/index.html'"

[tool.poetry]
name = "polytlk-olivia"
version = "1.0.0"
description = "Olivia: microservice for korean NLP"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

[[tool.poetry.packages]]
include = "olivia"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
konlpy = "^0.6.0"
mecab = "^0.996.3"
  
[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"

[tool.poetry.scripts]
start = "olivia.asgi:start"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
