[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core==1.1.0"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
show_missing = true

[tool.coverage.run]
branch = true
source = ["olivia"]

[tool.isort]
known_third_party = ["olivia."]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
strict = true

[tool.poetry]
authors = []
description = "Olivia: microservice for korean NLP"
license = "Proprietary"
name = "polytlk-olivia"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
esupar = "^1.6.2"
fastapi = "^0.95.2"
opentelemetry-api = "^1.18.0"
python = ">=3.11,<4.0"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.22.0"

[[tool.poetry.packages]]
include = "olivia"
