[tool.coverage.run]
branch = true
source = ["socrates"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.isort]
known_third_party = ["eden."]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
strict = true

[tool.poetry]
authors = []
description = "Socrates: chatgpt microservice"
license = 'Proprietary'
name = "socrates"
readme = 'README.md'
version = "1.0.0"

[[tool.poetry.packages]]
include = "socrates"

[tool.poetry.dependencies]
fastapi = "^0.95.2"
openai = "^0.27.8"
python = ">=3.11,<4.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.0"
mypy = "^1.3.0"
toml-sort = "^0.23.1"
wemake-python-styleguide = {git = "https://github.com/wemake-services/wemake-python-styleguide.git"}

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
no_block_comments = true
no_comments = true
no_footer_comments = true
no_header_comments = true
no_inline_comments = true
no_sort_tables = true
sort_first = ["key1", "key2"]
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core==1.1.0"]
