[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core==1.1.0"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
show_missing = true

[tool.coverage.run]
branch = true
source = ["socrates"]

[tool.isort]
known_third_party = ["socrates."]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
strict = true

[tool.poetry]
authors = []
description = "Socrates: chatgpt microservice"
license = "Proprietary"
name = "socrates"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
fastapi = "0.114.1"
openai = "1.42.0"
opentelemetry-api = "1.26.0"
opentelemetry-exporter-otlp-proto-http = "1.26.0"
opentelemetry-instrumentation-fastapi = "0.47b0"
opentelemetry-sdk = "1.26.0"
pydantic = "2.9.1"
python = ">=3.11,<4.0"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.22.0"

[[tool.poetry.packages]]
include = "socrates"
