[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core==1.1.0"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
show_missing = true

[tool.coverage.run]
branch = true
source = ["eden"]

[tool.isort]
known_third_party = ["eden."]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
strict = true

[tool.poetry]
authors = []
description = "Eden: worker for chinese NLP"
license = "Proprietary"
name = "polytlk-eden-worker"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
celery = "^5.3.0"
hanlp = "^2.1.0b50"
httpx = "^0.24.1"
opentelemetry-api = "1.26.0"
opentelemetry-exporter-otlp-proto-http = "1.26.0"
opentelemetry-instrumentation-celery = "0.47b0"
opentelemetry-instrumentation-httpx = "0.47b0"
opentelemetry-sdk = "1.26.0"
pydantic = "2.9.1"
python = ">=3.11,<4.0"
redis = "^4.5.5"
zhon = "^1.1.5"

[tool.poetry.group.local.dependencies]
watchfiles = "^0.19.0"

[[tool.poetry.packages]]
include = "eden"

[tool.pytest.ini_options]
addopts = "-v --strict-markers"
markers = ["dialogue", "meaning", "words"]
